# json-py

./: .coveragerc  .dockerignore  .flake8  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/api-fastapi/: main.py
src/api_django/: Dockerfile  db.sqlite3  main.py  manage.py
src/api_django/api/: urls.py  views.py
src/api_django/json_parser/: asgi.py  settings.py  urls.py  wsgi.py
src/api_fastapi/: Dockerfile  main.py
src/api_flask/: Dockerfile  main.py
src/cli/: Dockerfile  main.py
src/lib/: __init__.py  array.py  json.py  number.py  object.py  pair.py  string.py  types.py  value.py
src/scripts/: black_runner.py  coverage_runner.py  ruff_runner.py  test_runner.py
testdata/: all.rest  array.rest  bad-request.rest  boolean.rest  null.rest  number.rest  object.rest  string.rest
tests/: test_array.py  test_number.py  test_object.py  test_string.py  test_value.py
