[tool.poetry]
name = "json-py"
version = "0.1.0"
description = ""
authors = ["Joe Chung <joechung-msft@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lib", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
prettyprinter = "^0.18.0"
flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.4"
black = "^25.1.0"
ruff = "^0.12.9"

[tool.poetry.scripts]
black = "src.scripts.black_runner:main"
cli = "src.cli.main:main"
coverage = "src.scripts.coverage_runner:main"
fastapi = "src.api_fastapi.main:start"
flask = "src.api_flask.main:start"
ruff = "src.scripts.ruff_runner:main"
test = "src.scripts.test_runner:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]
