[project]
name = "json-py"
authors = [{name = "Joe Chung", email = "joechung-msft@users.noreply.github.com"}]
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "prettyprinter>=0.18.0,<0.19.0",
    "flask>=3.1.2,<3.2.0"
]

[tool.poetry]
packages = [{include = "lib", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
prettyprinter = "^0.18.0"
flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.4"
black = "^25.1.0"
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]
